Fixes to btn height on mobile

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -49,7 +49,7 @@ $light-black: #2b2b2d;
 
   @include mobile {
     width: 140px;
-    height: 40px;
+    height: 45px;
     font-size: .9rem;
   }
 }
